[package]
name = "vspk"
version = "4.0.5"
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
description = "Client for Nuage Network's VSD REST API"
documentation = ""
homepage = "https://github.com/nuagenetworks/vspk-rust"
repository = "https://github.com/nuagenetworks/vspk-rust"
readme = "README.md"
keywords = ["rest"]
license-file = "LICENSE"

[dependencies]
reqwest= "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
bambou = { path = "/home/corentih/bambou-rs" }
